<resources>
    <string name="app_name">Skycar</string>
    <string name="sign_up">注册</string>
    <string name="login">登录</string>
    <string name="wechat_login">微信登录</string>
    <string name="input_phone">输入手机号</string>
    <string name="input_your_phone">输入您的手机号</string>
    <string name="input_password">输入密码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="condition_term">注册即代表阅读并同意使用条款和隐私政策</string>
    <string name="country_region">国家/地区</string>
    <string name="choose_number_region">请选择手机号所在国家或地区</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="input_auth_code">输入验证码</string>
    <string name="auth_code_hint">输入6位验证码</string>
    <string name="resend">重新发送</string>
    <string name="next_step">下一步</string>
    <string name="auth_code_sent_foo">已给手机号</string>
    <string name="auth_code_sent_bar">发送了一个6位数验证码</string>
    <string name="set_profile">设置个人信息</string>
    <string name="set_nickname">设置您的昵称</string>
    <string name="set_email">输入您的邮箱</string>
    <string name="set_password">设置登录密码</string>
    <string name="set_your_password">设置您的登录密码</string>
    <string name="confirm_your_password">再次确认您的登录密码</string>
    <string name="skycar">车来了</string>
    <string name="scheduled_bus">班车</string>
    <string name="trip">行程</string>
    <string name="my">我的</string>
    <string name="airport_pick_up">机场接送</string>
    <string name="reserve_car">预约用车</string>
    <string name="companion_bus">结伴班车</string>
    <string name="chartered_travel">包车旅游</string>
    <string name="inquire_flight">查询航班</string>
    <string name="translate_licence">驾照翻译</string>
    <string name="inquire_flight_sub">查询航班信息</string>
    <string name="translate_licence_sub">驾照全球通行</string>
    <string name="user_real_time_comment">用户实时评价</string>
    <string name="my_trip">我的行程</string>
    <string name="personal_center">个人中心</string>
    <string name="search_companion_bus">搜索结伴班车</string>
    <string name="join">加入</string>
    <string name="balance">账户余额</string>
    <string name="my_wallet">我的钱包</string>
    <string name="my_comment">我的评价</string>
    <string name="coupon">优惠券</string>
    <string name="driver_auth">车主认证</string>
    <string name="business_cooperation">商业合作</string>
    <string name="address_contact_management">地址、联系人管理</string>
    <string name="membership_management">会员管理</string>
    <string name="q_a">常见问题</string>
    <string name="about_us">关于我们</string>
    <string name="contact_us">联系我们</string>
    <string name="pickup">接机</string>
    <string name="dropoff">送机</string>
    <string name="round">往返</string>
    <string name="fill_use_car_info">填写用车信息</string>
    <string name="airport">机场</string>
    <string name="please_choose_airport">请选择机场</string>
    <string name="arrive">送达</string>
    <string name="please_input_arrive">请输入送达地</string>
    <string name="time">时间</string>
    <string name="use_car_time">用车时间</string>
    <string name="choose_use_car_time">请选择用车时间</string>
    <string name="depart">出发</string>
    <string name="please_input_depart">请输入出发地</string>
    <string name="depart_time">出发时间</string>
    <string name="check_from_flight">按航班查询</string>
    <string name="continue_reserve">继续预约</string>
    <string name="base_price">基础价</string>
    <string name="price_rule">计价规则</string>
    <string name="wait_hint">以实际降落时间开始计算，免费等待九十分钟</string>
    <string name="confirm_trip">确认行程</string>
    <string name="flight_change_hint">若航班行程改变，请及时联系接单司机。</string>
    <string name="people_number">人数</string>
    <string name="choose_people_number">请选择乘车人数</string>
    <string name="luggage_number">行李数</string>
    <string name="choose_luggage_number">请选择行李数</string>
    <string name="contact_person">联系人</string>
    <string name="fill_contact_person">请填写联系人姓名</string>
    <string name="common_contact_person">常用联系人</string>
    <string name="mobile_number">手机号</string>
    <string name="fill_mobile_number">请填写手机号</string>
    <string name="standby_mobile_number">备用手机号</string>
    <string name="flight_number">航班号</string>
    <string name="fill_flight_number">请填写航班号，出行更省心</string>
    <string name="car_share">拼车出行</string>
    <string name="check_car_share_rule">查看拼车规则</string>
    <string name="show_card_pickup">举牌接机</string>
    <string name="online_pay_hint">在线支付，9.8折</string>
    <string name="offline_pay_hint">上车付</string>
    <string name="adult">成人</string>
    <string name="child">儿童</string>
    <string name="seven_plus">&gt;7岁</string>
    <string name="seven_minus">&lt;7岁</string>
    <string name="big_luggage">大行李</string>
    <string name="small_luggage">小行李</string>
    <string name="passenger">乘车人</string>
    <string name="add_passenger">新增乘车人</string>
    <string name="name">姓名</string>
    <string name="fill_name">请填写姓名</string>
    <string name="address_book">通讯录</string>
    <string name="confirm_pay">确认支付</string>
    <string name="skycar_online_pay">SKY-CAR在线支付</string>
    <string name="alipay">支付宝支付</string>
    <string name="wechat_pay">微信支付</string>
    <string name="skycar_pay">余额支付</string>
    <string name="upload_successful">提交成功</string>
    <string name="pay_successful">支付成功</string>
    <string name="thank_you_choose_skycar">感谢您选择与Skycar同行</string>
    <string name="if_question_contact_us">如有任何问题请联系客服</string>
    <string name="skycar_service">Skycar车来了将竭诚为您服务</string>
    <string name="pay_method">支付方式：</string>
    <string name="on_board_pay">上车支付</string>
    <string name="order_amount">订单金额：</string>
    <string name="where_to_start">您从哪出发</string>
    <string name="where_to_go">您想要去哪</string>
    <string name="confirm_skycar_pay">确认余额支付</string>
    <string name="skycar_protect_you">让Skycar安全准时的为你保驾护航</string>
    <string name="common_address">常用地址</string>
    <string name="acceptable_time_range">可接受时间范围</string>
    <string name="expected_arrive_time">期望到达时间</string>
    <string name="intercity_bus_declaration">城际班次说明</string>
    <string name="add_common_address">新增地址</string>
    <string name="city">城市</string>
    <string name="choose_city">请选择您的城市</string>
    <string name="state">州</string>
    <string name="choose_state">请选择您的州</string>
    <string name="detail_address">详细地址</string>
    <string name="input_detail_address">请输入您的详细地址</string>
    <string name="postcode">邮编</string>
    <string name="input_postcode">请输入您当地的邮政编码</string>
    <string name="order_detail">订单详情</string>
    <string name="immediate_join">立即加入</string>
    <string name="contact_service">联系客服</string>
    <string name="continue_order">继续</string>
    <string name="contact_number">联系电话</string>
    <string name="join_bus">加入班车</string>
    <string name="confirm_bus">确认班车</string>
    <string name="immediate_pay">立即支付</string>
    <string name="bus_seat_reserved_hint">班车座位已为您预留，请在下单十五分钟内付款</string>
    <string name="total_price">合计</string>
    <string name="choose_destination_city">请选择目标城市</string>
    <string name="my_wish_list">我的愿望清单</string>
    <string name="route">路线</string>
    <string name="day_number">天数</string>
    <string name="keyword">关键字</string>
    <string name="route_detail">路线详情</string>
    <string name="general_info">基本信息</string>
    <string name="duration">时长</string>
    <string name="travel">出行</string>
    <string name="address">地址</string>
    <string name="navi_on_the_way">导航查看沿途热点推荐</string>
    <string name="journey_reference">行程参考</string>
    <string name="user_comment">用户评价</string>
    <string name="order_tips">下单小贴士</string>
    <string name="good_recommendation">好看推荐</string>
    <string name="journey_notes">*以上参考行程和建议出发时间可根据您的需要在下单时自助调整（仅出发时间），或者联系客服帮助修改。</string>
    <string name="chartered_journey">包车出行</string>
    <string name="group_journey">拼团出行</string>
    <string name="choose_date">选择日期</string>
    <string name="start_book">开始预订</string>
    <string name="confirm_order">确认订单</string>
    <string name="end_time">截止时间</string>
    <string name="share_fee">拼车费用</string>
    <string name="choose_car_type">选择车型</string>
    <string name="trip_people_number">出行人数</string>
    <string name="luggage">行李</string>
    <string name="trip_info">出行信息</string>
    <string name="get_on_time">上车时间</string>
    <string name="fill_local_time">请填写当地时间</string>
    <string name="get_on_place">上车地点</string>
    <string name="fill_get_on_place">请填写上车地点</string>
    <string name="wechat_number">微信号</string>
    <string name="fill_wechat_number">可填写微信号作为备用联系方式</string>
    <string name="remark">备注</string>
    <string name="fill_remark">可填写您的其他需求</string>
    <string name="discount_way">优惠方式</string>
    <string name="promotion_code">优惠码</string>
    <string name="fill_promotion_code">请输入优惠码</string>
    <string name="detail_price">价格明细</string>
    <string name="price_in_total">价格总计</string>
    <string name="discount_price">优惠金额</string>
    <string name="actual_price">实付金额</string>
    <string name="fill_flight_info">填写航班信息</string>
    <string name="takeoff_time">起飞时间（当地）</string>
    <string name="choose_takeoff_time">请选择起飞时间</string>
    <string name="if_transit_hint">如有中转，请填写末航班的信息</string>
    <string name="inquire_result">查询结果</string>
    <string name="translate_license_hint">国际驾照翻译件，澳洲境内可包邮，其他翻译请联系客服。</string>
    <string name="email">电子邮箱</string>
    <string name="translation_send_email">驾照翻译电子版会发送到此邮箱</string>
    <string name="australian_address">澳洲地址</string>
    <string name="translation_send_address">驾照翻译会寄到此地址</string>
    <string name="upload_pay">提交并支付</string>
    <string name="upload_license_front">上传驾照正面</string>
    <string name="upload_license_back">上传驾照反面</string>
    <string name="click_upload">点击上传</string>
    <string name="upload_license_hint">请提交驾驶证正面照片，确保文字清晰、无反光、无遮挡</string>
    <string name="take_photo">上传照片</string>
    <string name="pick_library">从相册选择</string>
    <string name="upload_photo">上传照片</string>
    <string name="domestic">国内</string>
    <string name="international">国际</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="chinese_week_string_array">
        <item>日</item>
        <item>一</item>
        <item>二</item>
        <item>三</item>
        <item>四</item>
        <item>五</item>
        <item>六</item>
    </string-array>


    <string name="network_error">网络错误，请稍后再试。</string>
    <string name="logining">登录中……</string>
</resources>
