<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InquireFlightActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fill_flight_info"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_margin="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flight_number"
                    android:layout_gravity="start"
                    android:layout_margin="16dp"/>

                <EditText
                    android:id="@+id/flight_number_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="请输入航班号，如3U601"
                    android:layout_marginBottom="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/takeoff_time"
                    android:layout_gravity="start"
                    android:layout_margin="16dp" />

                <EditText
                    android:id="@+id/takeoff_time_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/choose_takeoff_time"
                    android:layout_marginBottom="16dp"
                    android:focusable="false"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/inquire_button"
        android:layout_centerHorizontal="true"
        android:text="@string/if_transit_hint"
        android:drawableLeft="@drawable/hint"/>

    <Button
        android:id="@+id/inquire_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_red_theme_button"
        android:text="@string/inquire_flight"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        android:textColor="@color/white"/>

</RelativeLayout>