<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            android:background="@android:color/transparent"
            android:src="@drawable/close" />

        <TextView
            android:id="@+id/title_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/upload_photo"
            android:textColor="@android:color/black" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/sample"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/license_banner"
        android:scaleType="fitXY"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_license_hint"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@+id/take_photo_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_join_button"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/take_photo"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@+id/pick_library_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_join_button"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/pick_library"
        android:textColor="@android:color/black"/>

</LinearLayout>